libretro.h

/* Hack applied for MSVC when compiling in C89 mode
 * as it isn't C99-compliant. */
#define bool unsigned char
   struct retro_game_info;
   enum retro_pixel_format
   {
      /* 0RGB1555, native endian.
       * 0 bit must be set to 0.
       * This pixel format is default for compatibility concerns only.
       * If a 15/16-bit pixel format is desired, consider using RGB565. */
      RETRO_PIXEL_FORMAT_0RGB1555 = 0,

      /* XRGB8888, native endian.
       * X bits are ignored. */
      RETRO_PIXEL_FORMAT_XRGB8888 = 1,

      /* RGB565, native endian.
       * This pixel format is the recommended format to use if a 15/16-bit
       * format is desired as it is the pixel format that is typically
       * available on a wide range of low-power devices.
       *
       * It is also natively supported in APIs like OpenGL ES. */
      RETRO_PIXEL_FORMAT_RGB565 = 2,

      /* Ensure sizeof() == sizeof(int). */
      RETRO_PIXEL_FORMAT_UNKNOWN = INT_MAX
   };
   struct retro_system_info
   {
      /* All pointers are owned by libretro implementation, and pointers must
       * remain valid until it is unloaded. */

      const char *library_name;    /* Descriptive name of library. Should not
                                    * contain any version numbers, etc. */
      const char *library_version; /* Descriptive version of core. */

      const char *valid_extensions; /* A string listing probably content
                                     * extensions the core will be able to
                                     * load, separated with pipe.
                                     * I.e. "bin|rom|iso".
                                     * Typically used for a GUI to filter
                                     * out extensions. */

      /* Libretro cores that need to have direct access to their content
       * files, including cores which use the path of the content files to
       * determine the paths of other files, should set need_fullpath to true.
       *
       * Cores should strive for setting need_fullpath to false,
       * as it allows the frontend to perform patching, etc.
       *
       * If need_fullpath is true and retro_load_game() is called:
       *    - retro_game_info::path is guaranteed to have a valid path
       *    - retro_game_info::data and retro_game_info::size are invalid
       *
       * If need_fullpath is false and retro_load_game() is called:
       *    - retro_game_info::path may be NULL
       *    - retro_game_info::data and retro_game_info::size are guaranteed
       *      to be valid
       *
       * See also:
       *    - RETRO_ENVIRONMENT_GET_SYSTEM_DIRECTORY
       *    - RETRO_ENVIRONMENT_GET_SAVE_DIRECTORY
       */
      bool need_fullpath;

      /* If true, the frontend is not allowed to extract any archives before
       * loading the real content.
       * Necessary for certain libretro implementations that load games
       * from zipped archives. */
      bool block_extract;
   };
   struct retro_game_geometry
   {
      unsigned base_width;  /* Nominal video width of game. */
      unsigned base_height; /* Nominal video height of game. */
      unsigned max_width;   /* Maximum possible width of game. */
      unsigned max_height;  /* Maximum possible height of game. */

      float aspect_ratio; /* Nominal aspect ratio of game. If
                           * aspect_ratio is <= 0.0, an aspect ratio
                           * of base_width / base_height is assumed.
                           * A frontend could override this setting,
                           * if desired. */
   };
   struct retro_system_timing
   {
      double fps;         /* FPS of video content. */
      double sample_rate; /* Sampling rate of audio. */
   };
   struct retro_system_av_info
   {
      struct retro_game_geometry geometry;
      struct retro_system_timing timing;
   };
   struct retro_core_option_value
   {
      /* Expected option value */
      const char *value;

      /* Human-readable value label. If NULL, value itself
       * will be displayed by the frontend */
      const char *label;
   };
   struct retro_core_option_v2_category
   {
      /* Variable uniquely identifying the
       * option category. Valid key characters
       * are [a-z, A-Z, 0-9, _, -] */
      const char *key;

      /* Human-readable category description
       * > Used as category menu label when
       *   frontend has core option category
       *   support */
      const char *desc;

      /* Human-readable category information
       * > Used as category menu sublabel when
       *   frontend has core option category
       *   support
       * > Optional (may be NULL or an empty
       *   string) */
      const char *info;
   };
   struct retro_core_option_v2_definition
   {
      /* Variable to query in RETRO_ENVIRONMENT_GET_VARIABLE.
       * Valid key characters are [a-z, A-Z, 0-9, _, -] */
      const char *key;

      /* Human-readable core option description
       * > Used as menu label when frontend does
       *   not have core option category support
       *   e.g. "Video > Aspect Ratio" */
      const char *desc;

      /* Human-readable core option description
       * > Used as menu label when frontend has
       *   core option category support
       *   e.g. "Aspect Ratio", where associated
       *   retro_core_option_v2_category::desc
       *   is "Video"
       * > If empty or NULL, the string specified by
       *   desc will be used as the menu label
       * > Will be ignored (and may be set to NULL)
       *   if category_key is empty or NULL */
      const char *desc_categorized;

      /* Human-readable core option information
       * > Used as menu sublabel */
      const char *info;

      /* Human-readable core option information
       * > Used as menu sublabel when frontend
       *   has core option category support
       *   (e.g. may be required when info text
       *   references an option by name/desc,
       *   and the desc/desc_categorized text
       *   for that option differ)
       * > If empty or NULL, the string specified by
       *   info will be used as the menu sublabel
       * > Will be ignored (and may be set to NULL)
       *   if category_key is empty or NULL */
      const char *info_categorized;

      /* Variable specifying category (e.g. "video",
       * "audio") that will be assigned to the option
       * if frontend has core option category support.
       * > Categorized options will be displayed in a
       *   subsection/submenu of the frontend core
       *   option interface
       * > Specified string must match one of the
       *   retro_core_option_v2_category::key values
       *   in the associated retro_core_option_v2_category
       *   array; If no match is not found, specified
       *   string will be considered as NULL
       * > If specified string is empty or NULL, option will
       *   have no category and will be shown at the top
       *   level of the frontend core option interface */
      const char *category_key;

      /* Array of retro_core_option_value structs, terminated by NULL */
      struct retro_core_option_value values[RETRO_NUM_CORE_OPTION_VALUES_MAX];

      /* Default core option value. Must match one of the values
       * in the retro_core_option_value array, otherwise will be
       * ignored */
      const char *default_value;
   };
   struct retro_core_options_v2
   {
      /* Array of retro_core_option_v2_category structs,
       * terminated by NULL
       * > If NULL, all entries in definitions array
       *   will have no category and will be shown at
       *   the top level of the frontend core option
       *   interface
       * > Will be ignored if frontend does not have
       *   core option category support */
      struct retro_core_option_v2_category *categories;

      /* Array of retro_core_option_v2_definition structs,
       * terminated by NULL */
      struct retro_core_option_v2_definition *definitions;
   };
   struct retro_core_options_v2_intl
   {
      /* Pointer to a retro_core_options_v2 struct
       * > US English implementation
       * > Must point to a valid struct */
      struct retro_core_options_v2 *us;

      /* Pointer to a retro_core_options_v2 struct
       * - Implementation for current frontend language
       * - May be NULL */
      struct retro_core_options_v2 *local;
   };
   /* Used by the frontend to monitor changes in core option
    * visibility. May be called each time any core option
    * value is set via the frontend.
    * - On each invocation, the core must update the visibility
    *   of any dynamically hidden options using the
    *   RETRO_ENVIRONMENT_SET_CORE_OPTIONS_DISPLAY environment
    *   callback.
    * - On the first invocation, returns 'true' if the visibility
    *   of any core option has changed since the last call of
    *   retro_load_game() or retro_load_game_special().
    * - On each subsequent invocation, returns 'true' if the
    *   visibility of any core option has changed since the last
    *   time the function was called. */
   typedef bool(RETRO_CALLCONV *retro_core_options_update_display_callback_t)(void);
   struct retro_core_options_update_display_callback
   {
      retro_core_options_update_display_callback_t callback;
   };
   struct retro_game_info
   {
      const char *path; /* Path to game, UTF-8 encoded.
                         * Sometimes used as a reference for building other paths.
                         * May be NULL if game was loaded from stdin or similar,
                         * but in this case some cores will be unable to load `data`.
                         * So, it is preferable to fabricate something here instead
                         * of passing NULL, which will help more cores to succeed.
                         * retro_system_info::need_fullpath requires
                         * that this path is valid. */
      const void *data; /* Memory buffer of loaded game. Will be NULL
                         * if need_fullpath was set. */
      size_t size;      /* Size of memory buffer. */
      const char *meta; /* String of implementation specific meta-data. */
   };
   /* The memory in data is cached.
    * If not cached, random writes and/or reading from the buffer is expected to be very slow. */
   struct retro_framebuffer
   {
      void *data;                     /* The framebuffer which the core can render into.
                                         Set by frontend in GET_CURRENT_SOFTWARE_FRAMEBUFFER.
                                         The initial contents of data are unspecified. */
      unsigned width;                 /* The framebuffer width used by the core. Set by core. */
      unsigned height;                /* The framebuffer height used by the core. Set by core. */
      size_t pitch;                   /* The number of bytes between the beginning of a scanline,
                                         and beginning of the next scanline.
                                         Set by frontend in GET_CURRENT_SOFTWARE_FRAMEBUFFER. */
      enum retro_pixel_format format; /* The pixel format the core must use to render into data.
                                         This format could differ from the format used in
                                         SET_PIXEL_FORMAT.
                                         Set by frontend in GET_CURRENT_SOFTWARE_FRAMEBUFFER. */

      unsigned access_flags; /* How the core will access the memory in the framebuffer.
                                RETRO_MEMORY_ACCESS_* flags.
                                Set by core. */
      unsigned memory_flags; /* Flags telling core how the memory has been mapped.
                                RETRO_MEMORY_TYPE_* flags.
                                Set by frontend in GET_CURRENT_SOFTWARE_FRAMEBUFFER. */
   };
   /* Used by a libretro core to override the current
    * fastforwarding mode of the frontend */
   struct retro_fastforwarding_override
   {
      /* Specifies the runtime speed multiplier that
       * will be applied when 'fastforward' is true.
       * For example, a value of 5.0 when running 60 FPS
       * content will cap the fast-forward rate at 300 FPS.
       * Note that the target multiplier may not be achieved
       * if the host hardware has insufficient processing
       * power.
       * Setting a value of 0.0 (or greater than 0.0 but
       * less than 1.0) will result in an uncapped
       * fast-forward rate (limited only by hardware
       * capacity).
       * If the value is negative, it will be ignored
       * (i.e. the frontend will use a runtime speed
       * multiplier of its own choosing) */
      float ratio;

      /* If true, fastforwarding mode will be enabled.
       * If false, fastforwarding mode will be disabled. */
      bool fastforward;

      /* If true, and if supported by the frontend, an
       * on-screen notification will be displayed while
       * 'fastforward' is true.
       * If false, and if supported by the frontend, any
       * on-screen fast-forward notifications will be
       * suppressed */
      bool notification;

      /* If true, the core will have sole control over
       * when fastforwarding mode is enabled/disabled;
       * the frontend will not be able to change the
       * state set by 'fastforward' until either
       * 'inhibit_toggle' is set to false, or the core
       * is unloaded */
      bool inhibit_toggle;
   };
   struct retro_throttle_state
   {
      /* The current throttling mode. Should be one of the values above. */
      unsigned mode;

      /* How many times per second the frontend aims to call retro_run.
       * Depending on the mode, it can be 0 if there is no known fixed rate.
       * This won't be accurate if the total processing time of the core and
       * the frontend is longer than what is available for one frame. */
      float rate;
   };
   /* Callbacks */

   /* Environment callback. Gives implementations a way of performing
    * uncommon tasks. Extensible. */
   typedef bool(RETRO_CALLCONV *retro_environment_t)(unsigned cmd, void *data);
   /* Render a frame. Pixel format is 15-bit 0RGB1555 native endian
    * unless changed (see RETRO_ENVIRONMENT_SET_PIXEL_FORMAT).
    *
    * Width and height specify dimensions of buffer.
    * Pitch specifices length in bytes between two lines in buffer.
    *
    * For performance reasons, it is highly recommended to have a frame
    * that is packed in memory, i.e. pitch == width * byte_per_pixel.
    * Certain graphic APIs, such as OpenGL ES, do not like textures
    * that are not packed in memory.
    */
   typedef void(RETRO_CALLCONV *retro_video_refresh_t)(const void *data, unsigned width,
                                                       unsigned height, size_t pitch);
   /* Renders a single audio frame. Should only be used if implementation
    * generates a single sample at a time.
    * Format is signed 16-bit native endian.
    */
   typedef void(RETRO_CALLCONV *retro_audio_sample_t)(int16_t left, int16_t right);
   /* Renders multiple audio frames in one go.
    *
    * One frame is defined as a sample of left and right channels, interleaved.
    * I.e. int16_t buf[4] = { l, r, l, r }; would be 2 frames.
    * Only one of the audio callbacks must ever be used.
    */
   typedef size_t(RETRO_CALLCONV *retro_audio_sample_batch_t)(const int16_t *data,
                                                              size_t frames);
   /* Polls input. */
   typedef void(RETRO_CALLCONV *retro_input_poll_t)(void);
   /* Queries for input for player 'port'. device will be masked with
    * RETRO_DEVICE_MASK.
    *
    * Specialization of devices such as RETRO_DEVICE_JOYPAD_MULTITAP that
    * have been set with retro_set_controller_port_device()
    * will still use the higher level RETRO_DEVICE_JOYPAD to request input.
    */
   typedef int16_t(RETRO_CALLCONV *retro_input_state_t)(unsigned port, unsigned device,
                                                        unsigned index, unsigned id);
   /* Sets callbacks. retro_set_environment() is guaranteed to be called
    * before retro_init().
    *
    * The rest of the set_* functions are guaranteed to have been called
    * before the first call to retro_run() is made. */
   RETRO_API void retro_set_environment(retro_environment_t);
   RETRO_API void retro_set_video_refresh(retro_video_refresh_t);
   RETRO_API void retro_set_audio_sample(retro_audio_sample_t);
   RETRO_API void retro_set_audio_sample_batch(retro_audio_sample_batch_t);
   RETRO_API void retro_set_input_poll(retro_input_poll_t);
   RETRO_API void retro_set_input_state(retro_input_state_t);
   /* Library global initialization/deinitialization. */
   RETRO_API void retro_init(void);
   RETRO_API void retro_deinit(void);
   /* Must return RETRO_API_VERSION. Used to validate ABI compatibility
    * when the API is revised. */
   RETRO_API unsigned retro_api_version(void);
   /* Gets statically known system info. Pointers provided in *info
    * must be statically allocated.
    * Can be called at any time, even before retro_init(). */
   RETRO_API void retro_get_system_info(struct retro_system_info *info);
   /* Gets information about system audio/video timings and geometry.
    * Can be called only after retro_load_game() has successfully completed.
    * NOTE: The implementation of this function might not initialize every
    * variable if needed.
    * E.g. geom.aspect_ratio might not be initialized if core doesn't
    * desire a particular aspect ratio. */
   RETRO_API void retro_get_system_av_info(struct retro_system_av_info *info);
   /* Sets device to be used for player 'port'.
    * By default, RETRO_DEVICE_JOYPAD is assumed to be plugged into all
    * available ports.
    * Setting a particular device type is not a guarantee that libretro cores
    * will only poll input based on that particular device type. It is only a
    * hint to the libretro core when a core cannot automatically detect the
    * appropriate input device type on its own. It is also relevant when a
    * core can change its behavior depending on device type.
    *
    * As part of the core's implementation of retro_set_controller_port_device,
    * the core should call RETRO_ENVIRONMENT_SET_INPUT_DESCRIPTORS to notify the
    * frontend if the descriptions for any controls have changed as a
    * result of changing the device type.
    */
   RETRO_API void retro_set_controller_port_device(unsigned port, unsigned device);
   /* Resets the current game. */
   RETRO_API void retro_reset(void);
   /* Runs the game for one video frame.
    * During retro_run(), input_poll callback must be called at least once.
    *
    * If a frame is not rendered for reasons where a game "dropped" a frame,
    * this still counts as a frame, and retro_run() should explicitly dupe
    * a frame if GET_CAN_DUPE returns true.
    * In this case, the video callback can take a NULL argument for data.
    */
   RETRO_API void retro_run(void);
   /* Returns the amount of data the implementation requires to serialize
    * internal state (save states).
    * Between calls to retro_load_game() and retro_unload_game(), the
    * returned size is never allowed to be larger than a previous returned
    * value, to ensure that the frontend can allocate a save state buffer once.
    */
   RETRO_API size_t retro_serialize_size(void);
   /* Serializes internal state. If failed, or size is lower than
    * retro_serialize_size(), it should return false, true otherwise. */
   RETRO_API bool retro_serialize(void *data, size_t size);
   RETRO_API bool retro_unserialize(const void *data, size_t size);
   RETRO_API void retro_cheat_reset(void);
   RETRO_API void retro_cheat_set(unsigned index, bool enabled, const char *code);
   /* Loads a game.
    * Return true to indicate successful loading and false to indicate load failure.
    */
   RETRO_API bool retro_load_game(const struct retro_game_info *game);
   /* Loads a "special" kind of game. Should not be used,
    * except in extreme cases. */
   RETRO_API bool retro_load_game_special(
       unsigned game_type,
       const struct retro_game_info *info, size_t num_info);
   /* Unloads the currently loaded game. Called before retro_deinit(void). */
   RETRO_API void retro_unload_game(void);
   /* Gets region of game. */
   RETRO_API unsigned retro_get_region(void);
   /* Gets region of memory. */
   RETRO_API void *retro_get_memory_data(unsigned id);
   RETRO_API size_t retro_get_memory_size(unsigned id);