src/sys.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_option_v2_category {
    pub key: *const ::std::os::raw::c_char,
    pub desc: *const ::std::os::raw::c_char,
    pub info: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_option_v2_definition {
    pub key: *const ::std::os::raw::c_char,
    pub desc: *const ::std::os::raw::c_char,
    pub desc_categorized: *const ::std::os::raw::c_char,
    pub info: *const ::std::os::raw::c_char,
    pub info_categorized: *const ::std::os::raw::c_char,
    pub category_key: *const ::std::os::raw::c_char,
    pub values: [retro_core_option_value; 128usize],
    pub default_value: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_options_v2 {
    pub categories: *mut retro_core_option_v2_category,
    pub definitions: *mut retro_core_option_v2_definition,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_options_v2_intl {
    pub us: *mut retro_core_options_v2,
    pub local: *mut retro_core_options_v2,
}
pub type retro_core_options_update_display_callback_t =
    ::std::option::Option<unsafe extern "C" fn() -> bool>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_options_update_display_callback {
    pub callback: retro_core_options_update_display_callback_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_game_info {
    pub path: *const ::std::os::raw::c_char,
    pub data: *const ::std::os::raw::c_void,
    pub size: size_t,
    pub meta: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_framebuffer {
    pub data: *mut ::std::os::raw::c_void,
    pub width: ::std::os::raw::c_uint,
    pub height: ::std::os::raw::c_uint,
    pub pitch: size_t,
    pub format: retro_pixel_format,
    pub access_flags: ::std::os::raw::c_uint,
    pub memory_flags: ::std::os::raw::c_uint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_fastforwarding_override {
    pub ratio: f32,
    pub fastforward: bool,
    pub notification: bool,
    pub inhibit_toggle: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_throttle_state {
    pub mode: ::std::os::raw::c_uint,
    pub rate: f32,
}
pub type retro_environment_t = ::std::option::Option<
    unsafe extern "C" fn(cmd: ::std::os::raw::c_uint, data: *mut ::std::os::raw::c_void) -> bool,
>;
pub type retro_video_refresh_t = ::std::option::Option<
    unsafe extern "C" fn(
        data: *const ::std::os::raw::c_void,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        pitch: size_t,
    ),
>;
pub type retro_audio_sample_t = ::std::option::Option<unsafe extern "C" fn(left: i16, right: i16)>;
pub type retro_audio_sample_batch_t =
    ::std::option::Option<unsafe extern "C" fn(data: *const i16, frames: size_t) -> size_t>;
pub type retro_input_poll_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_input_state_t = ::std::option::Option<
    unsafe extern "C" fn(
        port: ::std::os::raw::c_uint,
        device: ::std::os::raw::c_uint,
        index: ::std::os::raw::c_uint,
        id: ::std::os::raw::c_uint,
    ) -> i16,
>;
extern "C" {
    pub fn retro_set_environment(arg1: retro_environment_t);
    pub fn retro_set_video_refresh(arg1: retro_video_refresh_t);
    pub fn retro_set_audio_sample(arg1: retro_audio_sample_t);
    pub fn retro_set_audio_sample_batch(arg1: retro_audio_sample_batch_t);
    pub fn retro_set_input_poll(arg1: retro_input_poll_t);
    pub fn retro_set_input_state(arg1: retro_input_state_t);
    pub fn retro_init();
    pub fn retro_deinit();
    pub fn retro_api_version() -> ::std::os::raw::c_uint;
    pub fn retro_get_system_info(info: *mut retro_system_info);
    pub fn retro_get_system_av_info(info: *mut retro_system_av_info);
    pub fn retro_set_controller_port_device(
        port: ::std::os::raw::c_uint,
        device: ::std::os::raw::c_uint,
    );
    pub fn retro_reset();
    pub fn retro_run();
    pub fn retro_serialize_size() -> size_t;
    pub fn retro_serialize(data: *mut ::std::os::raw::c_void, size: size_t) -> bool;
    pub fn retro_unserialize(data: *const ::std::os::raw::c_void, size: size_t) -> bool;
    pub fn retro_cheat_reset();
    pub fn retro_cheat_set(
        index: ::std::os::raw::c_uint,
        enabled: bool,
        code: *const ::std::os::raw::c_char,
    );
    pub fn retro_load_game(game: *const retro_game_info) -> bool;
    pub fn retro_load_game_special(
        game_type: ::std::os::raw::c_uint,
        info: *const retro_game_info,
        num_info: size_t,
    ) -> bool;
    pub fn retro_unload_game();
    pub fn retro_get_region() -> ::std::os::raw::c_uint;
    pub fn retro_get_memory_data(id: ::std::os::raw::c_uint) -> *mut ::std::os::raw::c_void;
    pub fn retro_get_memory_size(id: ::std::os::raw::c_uint) -> size_t;
}
